cfn_benchmark/cfn_templates/radxdatahub__Cloud-Replication/modules/Networking.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >-
    Last Modified: 2025/10/16 17:06:37
    "RADx Networking stack"

Parameters:
  Environment:
    Type: String
    Description: The Project Environment
    AllowedValues:
      - dev
      - test
      - prod
      - shared
  ProjectName:
    Type: String
    Description: The Project name
    Default: radx
    AllowedValues:
      - radx
  ProjectNameUpper:
    Type: String
    Description: The Project name
    Default: RADx
    AllowedValues:
      - RADx

Conditions:
  DEV: !Equals [!Ref Environment, dev]
  TEST: !Equals [!Ref Environment, test]
  PROD: !Equals [!Ref Environment, prod]
  NOTDEV: !Not [!Equals [!Ref Environment, dev]]
  NOTPROD: !Not [!Equals [!Ref Environment, prod]]

Resources:
  RADxVPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.40.0.0/16"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: "default"
      Tags:
        - Key: "Environment"
          Value: !Sub "${Environment}"
        - Key: "Name"
          Value: !Sub "${ProjectName}-${Environment}"

  RADxPublicSubnetAZ2:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !GetAtt RADxPrivateSubnetAZ2.AvailabilityZone
      CidrBlock: "10.40.32.0/20"
      VpcId: !Ref RADxVPC
      MapPublicIpOnLaunch: true
      Tags:
        - Key: "Environment"
          Value: !Sub "${Environment}"
        - Key: "Name"
          Value: !Sub "${ProjectNameUpper}-Public-Subnet-AZ2-${Environment}"

  RADxPublicSubnetAZ1:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !GetAtt RADxPrivateSubnetAZ1.AvailabilityZone
      CidrBlock: "10.40.16.0/20"
      VpcId: !Ref RADxVPC
      MapPublicIpOnLaunch: true
      Tags:
        - Key: "Environment"
          Value: !Sub "${Environment}"
        - Key: "Name"
          Value: !Sub "${ProjectNameUpper}-Public-Subnet-AZ1-${Environment}"

  RADxPrivateSubnetAZ1:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}a"
      CidrBlock: "10.40.48.0/20"
      VpcId: !Ref RADxVPC
      MapPublicIpOnLaunch: false
      Tags:
        - Key: "Environment"
          Value: !Sub "${Environment}"
        - Key: "Name"
          Value: !Sub "${ProjectNameUpper}-Private-SubnetAZ1-${Environment}"

  RADxPrivateSubnetAZ2:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Sub "${AWS::Region}b"
      CidrBlock: "10.40.64.0/20"
      VpcId: !Ref RADxVPC
      MapPublicIpOnLaunch: false
      Tags:
        - Key: "Environment"
          Value: !Sub "${Environment}"
        - Key: "Name"
          Value: !Sub "${ProjectNameUpper}-Private-Subnet-AZ2-${Environment}"

  RADxInternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: "Name"
          Value: !Sub "${ProjectNameUpper}-Internet-Gateway-${Environment}"
        - Key: "Environment"
          Value: !Sub "${Environment}"

  RADxPrivateRoutesAZ1:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref RADxVPC
      Tags:
        - Key: "Environment"
          Value: !Sub "${Environment}"
        - Key: "Name"
          Value: !Sub "${ProjectNameUpper}-Private-Routes-AZ1-${Environment}"

  RADxPrivateRoutesAZ2:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref RADxVPC
      Tags:
        - Key: "Environment"
          Value: !Sub "${Environment}"
        - Key: "Name"
          Value: !Sub "${ProjectNameUpper}-Private-Routes-AZ2-${Environment}"

  RADxPublicRoutesAZ1:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref RADxVPC
      Tags:
        - Key: "Environment"
          Value: !Sub "${Environment}"
        - Key: "Name"
          Value: !Sub "${ProjectNameUpper}-Public-Routes-${Environment}"

  RADxPublicRoutesAZ2:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref RADxVPC
      Tags:
        - Key: "Environment"
          Value: !Sub "${Environment}"
        - Key: "Name"
          Value: !Sub "${ProjectNameUpper}-Public-Routes2-${Environment}"

  EC2RoutePublicAZ2:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref RADxInternetGateway
      RouteTableId: !Ref RADxPublicRoutesAZ2

  EC2Route2:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref EC2NatGateway
      RouteTableId: !Ref RADxPrivateRoutesAZ1

  EC2RoutePrivateAZ2:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref EC2NatGateway
      RouteTableId: !Ref RADxPrivateRoutesAZ2

  EC2Route3:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref RADxInternetGateway
      RouteTableId: !Ref RADxPublicRoutesAZ1

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    Properties:
        Domain: vpc

  EC2NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
        AllocationId: !GetAtt NatGateway1EIP.AllocationId
        SubnetId: !Ref RADxPublicSubnetAZ1
        Tags:
          -
            Key: "Environment"
            Value: !Sub "${Environment}"
          -
            Key: "Name"
            Value: !Sub "${ProjectNameUpper}-Nat-Gateway-${Environment}"

# RDS PROXY VPC ENDPOINT
  # RADxVPCEndpoint:
  #   Type: "AWS::EC2::VPCEndpoint"
  #   Properties:
  #     VpcEndpointType: "Interface"
  #     VpcId: !Ref RADxVPC
  #     ServiceName: !Sub "com.amazonaws.vpce.${AWS::Region}.vpce-svc-045553b17ec91b500"
  #     PolicyDocument: |
  #         {
  #           "Statement": [
  #             {
  #               "Action": "*",
  #               "Effect": "Allow",
  #               "Principal": "*",
  #               "Resource": "*"
  #             }
  #           ]
  #         }
  #     SubnetIds:
  #       - !Ref RADxPublicSubnetAZ1
  #       - !Ref RADxPrivateSubnetAZ1
  #     PrivateDnsEnabled: false
  #     SecurityGroupIds:
  #       - !Ref ECSHostSecurityGroup

# S3 VPC ENDPOINT
  RADxS3VPCEndpoint:
      Type: "AWS::EC2::VPCEndpoint"
      Properties:
          VpcEndpointType: "Interface"
          VpcId: !Ref RADxVPC
          ServiceName: !Sub "com.amazonaws.${AWS::Region}.s3"
          PolicyDocument: |
              {
                "Statement": [
                  {
                    "Action": "*",
                    "Effect": "Allow",
                    "Principal": "*",
                    "Resource": "*"
                  }
                ]
              }
          SubnetIds:
            - !Ref RADxPrivateSubnetAZ1
            - !Ref RADxPrivateSubnetAZ2
          PrivateDnsEnabled: false
          SecurityGroupIds:
            - !Ref ECSHostSecurityGroup

# DATASYNC VPC ENDPOINT
  # RADxVPCEndpoint3:
  #   Type: "AWS::EC2::VPCEndpoint"
  #   Properties:
  #     VpcEndpointType: "Interface"
  #     VpcId: !Ref RADxVPC
  #     ServiceName: !Sub "com.amazonaws.${AWS::Region}.datasync"
  #     PolicyDocument: |
  #         {
  #           "Statement": [
  #             {
  #               "Action": "*",
  #               "Effect": "Allow",
  #               "Principal": "*",
  #               "Resource": "*"
  #             }
  #           ]
  #         }
  #     SubnetIds:
  #       - !Ref RADxPrivateSubnetAZ1
  #       - !Ref RADxPrivateSubnetAZ2
  #     PrivateDnsEnabled: true
  #     SecurityGroupIds:
  #       - "sg-0aa8e3f5049fbe1bf"

  RADxVPCGatewayAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref RADxInternetGateway
      VpcId: !Ref RADxVPC

  EC2SubnetRouteTableAssociation:
      Type: "AWS::EC2::SubnetRouteTableAssociation"
      Properties:
        RouteTableId: !Ref RADxPrivateRoutesAZ1
        SubnetId: !Ref RADxPrivateSubnetAZ1

  EC2SubnetRouteTableAssociation2:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref RADxPrivateRoutesAZ2
      SubnetId: !Ref  RADxPrivateSubnetAZ2

  EC2SubnetRouteTableAssociation3:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
        RouteTableId: !Ref RADxPublicRoutesAZ1
        SubnetId: !Ref RADxPublicSubnetAZ1

  EC2SubnetRouteTableAssociation4:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref RADxPublicRoutesAZ2
      SubnetId: !Ref RADxPublicSubnetAZ2

  ECSHostSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
          VpcId: !Ref RADxVPC
          GroupDescription: Access to the ECS hosts and the tasks/containers that run on them
          SecurityGroupIngress:
              # Only allow inbound access to ECS from the ELB
              - SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
                IpProtocol: -1
              - CidrIp: 10.40.0.0/16
                IpProtocol: -1
          Tags:
              - Key: Name
                Value: !Sub "${ProjectNameUpper}-ECS-Hosts-${Environment}"

  # This security group defines who/where is allowed to access the Application Load Balancer.
  # By default, we've opened this up to the public internet (0.0.0.0/0) but can you restrict
  # it further if you want.
  LoadBalancerSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
          VpcId: !Ref RADxVPC
          GroupDescription: Access to the load balancer that sits in front of ECS
          SecurityGroupIngress:
              # Allow access from anywhere to our ECS services
              - CidrIp: 10.40.0.0/16
                IpProtocol: -1
          Tags:
              - Key: Name
                Value: !Sub "${ProjectNameUpper}-LoadBalancers-${Environment}"

Outputs:
  VpcId:
    Value: !Ref RADxVPC
    Export:
      Name: !Sub "${AWS::StackName}-VPC-ID"

  PublicSubnetAZ1:
    Value: !Ref RADxPublicSubnetAZ1
    Export:
      Name: !Sub "${AWS::StackName}-Public-Subnet-AZ1"

  PublicSubnetAZ2:
    Value: !Ref RADxPublicSubnetAZ2
    Export:
      Name: !Sub "${AWS::StackName}-Public-Subnet-AZ2"

  PrivateSubnetAZ1:
    Value: !Ref RADxPrivateSubnetAZ1
    Export:
      Name: !Sub "${AWS::StackName}-Private-Subnet-AZ1"

  PrivateSubnetAZ2:
    Value: !Ref RADxPrivateSubnetAZ2
    Export:
      Name: !Sub "${AWS::StackName}-Private-Subnet-AZ2"

  LoadBalancerSecurityGroup:
    Value: !Ref LoadBalancerSecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}-LoadBalancer-SecurityGroup"

  ECSHostSecurityGroup:
    Value: !Ref ECSHostSecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}-ECS-Host-SecurityGroup"
