cfn_benchmark/cfn_templates/radxdatahub__Cloud-Replication/modules/RDS.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >-
    Last Modified: 2025/10/17 13:55:07
    "This template deploys the NIH RADx Data Hub RDS Database."
Parameters:
    Environment:
        Type: String
        Description: The Project Environment
        AllowedValues:
          - dev
          - test
          - prod
          - shared
    ProjectName:
        Type: String
        Description: The Project name
        Default: radx
        AllowedValues:
          - radx
    ProjectNameUpper:
        Type: String
        Description: The Project name in uppercase
        Default: RADx
        AllowedValues:
          - RADx
    DBMasterUsername:
        Type: String
        Description: Master username for the PostgreSQL instance
    DBMasterPassword:
        Type: String
        NoEcho: true
        Description: Master password for the PostgreSQL instance

Conditions:
    DEV: !Equals [!Ref Environment, dev]
    TEST: !Equals [!Ref Environment, test]
    PROD: !Equals [!Ref Environment, prod]
    NOTDEV: !Not [!Equals [!Ref Environment, dev]]
    NOTPROD: !Not [!Equals [!Ref Environment, prod]]

Resources:
    RDSDBInstance:
        Type: "AWS::RDS::DBInstance"
        Properties:
            DBInstanceIdentifier: !Sub "${ProjectName}-postgresql-${Environment}"
            AllocatedStorage: 20
            DBInstanceClass: "db.t4g.small"
            Engine: "postgres"
            MasterUsername: !Ref DBMasterUsername
            MasterUserPassword: !Ref DBMasterPassword
            DBName: !Sub "${ProjectName}_${Environment}"
            PreferredBackupWindow: "05:00-05:30"
            BackupRetentionPeriod: 3
            AvailabilityZone: !Sub "${AWS::Region}a"
            PreferredMaintenanceWindow: "sun:06:00-sun:06:30"
            MultiAZ: false
            EngineVersion: "16.9"
            AutoMinorVersionUpgrade: true
            LicenseModel: "postgresql-license"
            # Iops: 3000
            PubliclyAccessible: true
            StorageType: "gp3"
            Port: 5432
            StorageEncrypted: true
            # KmsKeyId: !Sub "arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/88cc85e9-4665-41a7-ae8a-a6bf09a4a0d6" # USE aws/rds AWS KMS Key
            CopyTagsToSnapshot: true
            MonitoringInterval: 0
            EnableIAMDatabaseAuthentication: false
            EnablePerformanceInsights: false
            DeletionProtection: false
            DBSubnetGroupName: !Sub "${ProjectName}-db-subnet-group-${Environment}"
            VPCSecurityGroups:
              - !Ref RdsSecurityGroup
            MaxAllocatedStorage: 1000
            DBParameterGroupName: !Ref RDSDBParameterGroup
            OptionGroupName: "default:postgres-16"
            CACertificateIdentifier: "rds-ca-rsa2048-g1"

# This is optional RDS Proxy setup, will need to be configured with Secrets Manager secrets once those are created
    # RDSDBProxy:
    #     Type: "AWS::RDS::DBProxy"
    #     Properties:
    #         DBProxyName: !Sub "radx-db-proxy-${Environment}"
    #         EngineFamily: "POSTGRESQL"
    #         VpcSecurityGroupIds:
    #           - "sg-0dc608be5f7eee5f6" ## GET FROM NETWORKING STACK
    #         VpcSubnetIds:
    #           - "subnet-0835f4ca5509a3ecc" ## GET FROM NETWORKING STACK
    #           - "subnet-041462c76d97c28a0" ## GET FROM NETWORKING STACK
    #         # Auth: ## GET FROM SECRETS MANAGER ONCE COMPLETED
    #         #   -
    #         #     AuthScheme: "SECRETS"
    #         #     SecretArn: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${RDSDBInstance}/testradxpostgres-IL7dGP"
    #         #     IAMAuth: "DISABLED"
    #         #     ClientPasswordAuthType: "POSTGRES_SCRAM_SHA_256"
    #         #   -
    #         #     AuthScheme: "SECRETS"
    #         #     SecretArn: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${RDSDBInstance}/radx_admin-VePiXp"
    #         #     IAMAuth: "DISABLED"
    #         #     ClientPasswordAuthType: "POSTGRES_SCRAM_SHA_256"
    #         RoleArn: !Sub "arn:aws:iam::${AWS::AccountId}:role/rds-proxy-role-1697141531813"  ## CREATE HERE
    #         RequireTLS: true
    #         IdleClientTimeout: 1800
    #         DebugLogging: false

    RDSDBSubnetGroup:
        Type: "AWS::RDS::DBSubnetGroup"
        Properties:
            DBSubnetGroupDescription: !Sub "${ProjectName}-db-subnet-group-${Environment}"
            DBSubnetGroupName: !Sub "${ProjectName}-db-subnet-group-${Environment}"
            SubnetIds:
              - Fn::ImportValue: !Sub "${ProjectNameUpper}-Networking-${Environment}-Public-Subnet-AZ1"
              - Fn::ImportValue: !Sub "${ProjectNameUpper}-Networking-${Environment}-Public-Subnet-AZ2"

    RDSDBParameterGroup:
        Type: "AWS::RDS::DBParameterGroup"
        Properties:
            Description: "Parameter group for the test db with pg_cron enabled"
            Family: "postgres16"
            Parameters:
                shared_preload_libraries: "pg_stat_statements,pg_tle,pg_cron"

# This is optional RDS Proxy Target Group setup
    # RDSDBProxyTargetGroup:
    #     Type: "AWS::RDS::DBProxyTargetGroup"
    #     Properties:
    #         DBProxyName: !Sub "radx-db-proxy-${Environment}"
    #         TargetGroupName: "default"
    #         ConnectionPoolConfigurationInfo:
    #             MaxConnectionsPercent: 100
    #             MaxIdleConnectionsPercent: 50
    #             ConnectionBorrowTimeout: 120
    #         DBInstanceIdentifiers:
    #           - !Ref RDSDBInstance

    RdsSecurityGroup:
        Type: "AWS::EC2::SecurityGroup"
        Properties:
            GroupDescription: "Created by RDS management console"
            GroupName: !Sub "${ProjectName}-db-sg-${Environment}"
            VpcId:
                Fn::ImportValue: !Sub "${ProjectNameUpper}-Networking-${Environment}-VPC-ID"
            Tags:
              -
                Key: "Name"
                Value: !Sub "${ProjectName}-db-sg-${Environment}"
            SecurityGroupIngress:
              - CidrIp: "10.31.0.0/16"
                Description: "Control VPC"
                FromPort: 0
                IpProtocol: "tcp"
                ToPort: 65535

              - CidrIp: "10.40.0.0/16"
                FromPort: 5432
                IpProtocol: "tcp"
                ToPort: 5432

              - SourceSecurityGroupId:
                  Fn::ImportValue: !Sub "${ProjectNameUpper}-Networking-${Environment}-ECS-Host-SecurityGroup"
                SourceSecurityGroupOwnerId: !Ref AWS::AccountId
                Description: "ECS Services"
                FromPort: 5432
                IpProtocol: "tcp"
                ToPort: 5432

              # External user access - Add user public IP addresses below
              # Example:
              # - CidrIp: "203.0.113.25/32"
              #   Description: "John Doe workstation"
              #   FromPort: 5432
              #   IpProtocol: "tcp"
              #   ToPort: 5432

            SecurityGroupEgress:
              - CidrIp: "0.0.0.0/0"
                Description: "Allow all outbound traffic"
                IpProtocol: "-1"
Outputs:
  RdsEndpoint:
    Value: !GetAtt RDSDBInstance.Endpoint.Address
    Export:
      Name: !Sub "${AWS::StackName}-rds-postgresql-${Environment}-Endpoint"
